--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -206,7 +206,6 @@ a {
 @media screen and (min-width: 64em) {
   .main-content {
     max-width: 64rem;
-    padding: 2rem 6rem;
     margin: 0 auto;
     font-size: 1.1rem; } }
 
@@ -217,7 +216,6 @@ a {
 
 @media screen and (max-width: 42em) {
   .main-content {
-    padding: 2rem 1rem;
     font-size: 1rem; } }
 
 .site-footer {
@@ -243,3 +241,8 @@ a {
 @media screen and (max-width: 42em) {
   .site-footer {
     font-size: 0.9rem; } }
+
+
+iframe {
+	border: 1px dotted gray;
+}
